# app/app.go
@@ -11,17 +11,23 @@ type Application struct {
 }
 
 type Commands struct {
-	AddUser          command.AddUserHandler
-	CreateTask       command.CreateTaskHandler
-	ChangeTaskStatus command.ChangeTaskStatusHandler
-	AssignTask       command.AssignTaskHandler
-	UpdateTaskTitle  command.UpdateTaskTitleHandler
-	UnassignTask     command.UnassignTaskHandler
-	ReopenTask       command.ReopenTaskHandler
-	DeleteTask       command.DeleteTaskHandler
-	ArchiveTask      command.ArchiveTaskHandler
+	AddUser           command.AddUserHandler
+	UpdateUserRole    command.UpdateUserRoleHandler
+	DeleteUser        command.DeleteUserHandler
+	UpdateUserProfile command.UpdateUserProfileHandler
+	CreateTask        command.CreateTaskHandler
+	ChangeTaskStatus  command.ChangeTaskStatusHandler
+	AssignTask        command.AssignTaskHandler
+	UpdateTaskTitle   command.UpdateTaskTitleHandler
+	UnassignTask      command.UnassignTaskHandler
+	ReopenTask        command.ReopenTaskHandler
+	DeleteTask        command.DeleteTaskHandler
+	ArchiveTask       command.ArchiveTaskHandler
 }
 
 type Queries struct {
 	Tasks query.TasksHandler
+	User  query.UserHandler
+	Users query.UsersHandler
+	Login query.LoginHandler
 }
